# cmake-study

./: .gitignore  CMakeLists.txt  README.md
00-Setup/: Mac.md  debug.md  vscode-cpp.md  windows.md
CMake-Syantax/: loop.cmake
CMake-samples/: .gitmodules  CMakeLists_basic_2.txt  CMakeLists_multifile.txt  CMakeLists_multifile_library_assets.txt
Setup/: Linux.md
Syantax/: find_package.cmake  function.cmake  sys-info.cmake  variable-scope.cmake
_Books/CMake Best Practices/: README.md
_Books/CMake Cookbook-2018/: README.md
_Books/Modern CMake for C++/: 01-First Steps.md  02-CMake Language.md  03-First CMake Project.md  README.md
_CMake-Syantax/: if.cmake  message.cmake  variable.cmake
_Courses/CMake Tests and Tooling for C-C++ Projects/: README.md
_Courses/Starting my modern C++ Project with CMake in 2024/: README.md
_Courses/Udemy-CMake Tests and Tooling for C-C++ Projects/: README.md
_Projects/SDLShooter/: .gitignore  CMakeLists.txt  README.md  main.cpp
_Projects/basicProject/: CMakeLists.txt  README.md  main.cpp  my_lib.cpp
_Projects/helloword/: CMakeLists.txt  (+1 more)
_cmake-samples/: CMakeLists_basic.txt
_notes/: CMake-basic.md  check-OS.md  cmake-command.md  cmake-generator.md  cmake-vscode.md  cmake.md  debug.md  resources.md  vscode-cpp.md  vscode.md
cmake/: FindGLEW.cmake
cmake-ctest/: CMakeLists.txt  README.md
cmake-ctest/evolution/: CMakeLists.txt
cmake-ctest/src/: CMakeLists.txt
cmake-lib/: CMakeLists.txt
cmake-obj-lib/: main.cpp
cmake-sdl-mingw/: CMakeLists.txt  README.md
cmake-sdl-mingw/src/: main.cpp
cmake-sdl3-submodule/: CMakelists.txt
cmake-win-demo/: README.md
src/: Game.cpp  Game.h  Renderer.cpp  Renderer.h
(+16 files in other folders)
